# softwaredesign-llm-application

./: .gitignore  README.md
29/: .env.sample  README.md  create_agent.ipynb  pyproject.toml  run.py
29/src/sd_29/: __init__.py  app.py
29/src/sd_29/agents/: __init__.py  email_assistant.py  resilient_agent.py  resilient_qa.py  tool_selector.py
29/src/sd_29/controllers/: __init__.py  base.py
29/src/sd_29/mock/: email_agent.json  tool_selector_agent.json
29/src/sd_29/pages/: common.py  scenario1.py  scenario2.py  scenario3.py
29/tests/: test_email_agent.py  test_email_assistant.py  test_resilient_agent.py  test_tool_selector_agent.py
30/: .env.sample  README.md  pyproject.toml  run.py
30/src/sd_30/: app.py
30/src/sd_30/agents/: __init__.py  tool_selector_agent.py
30/src/sd_30/controllers/: __init__.py  base.py
30/src/sd_30/mock/: __init__.py
30/src/sd_30/pages/: __init__.py  scenario1.py  scenario2.py  scenario3.py
30/tests/: conftest.py  test_email_agent.py  test_resilient_agent.py  test_tool_selector_agent.py
31/: .env.sample  README.md  pyproject.toml  run.py
31/src/sd_31/: app.py
31/src/sd_31/agents/: __init__.py  email_agent.py  tool_selector_agent.py
31/src/sd_31/controllers/: __init__.py  base.py
31/src/sd_31/mock/: resilient_agent.json
31/src/sd_31/pages/: common.py  scenario1.py  scenario2.py  scenario3.py
31/tests/: test_controller_base.py  test_email_agent.py  test_resilient_agent.py  test_tool_selector_agent.py
